just another piece of code

--- a/file/indix.html
+++ b/file/indix.html
@@ -29,6 +29,16 @@
   </h2>
 </head>
 
+<doctype html>
+<body>
+  
+  <script>
+   const canvas = get.
+  </script>
+
+</body>
+ 
+</doctype>
 
 
 <link rel="stylesheet" type="text/css" href="css.css">
